--- a/cssfolder/style2.css
+++ b/cssfolder/style2.css
@@ -9,6 +9,8 @@ color: #5cbdbb;
 color: #5cbd8b; 
 background-color: #def1e7;
 background-color: #def1f1;
+color: #ecb814; yellor for about me section
+background-color: #D3D3D3; about me section
 */
 
 body {
@@ -21,6 +23,8 @@ header {
   font-family: "Raleway", sans-serif;
   font-size: 8em;
   color: #5cbd8b;
+  padding-top: 10%;
+  /* text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; */
 }
 h1 {
   text-align: center;
@@ -44,4 +48,16 @@ li {
   color: white;
   border-radius: 25px;
   border: 2px solid black;
+  opacity: 0.7;
+  position: sticky;
+  top: 0;
+  /* width: 50%; */
+  z-index: 1;
+}
+a {
+  text-decoration: none;
+  color: white;
+}
+a:hover {
+  color: #5cbd8b;
 }
