--- a/cssfolder/about.css
+++ b/cssfolder/about.css
@@ -12,88 +12,208 @@ background-color: #def1f1;
 color: #ecb814; yellor for about me section
 background-color: #D3D3D3; about me section
 */
+@media (min-width: 401px) {
+  body {
+    margin: auto;
+    max-width: 750px;
+    background-color: #d3d3d3;
+    background-image: url("/imgfolder/lemon3.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+  }
+  .cellphoneheader {
+    display: none;
+    text-align: center;
+    font-family: "Raleway", sans-serif;
+    font-size: 9em;
+    color: #ecb814;
+    padding-top: 10%;
+  }
+  header {
+    text-align: center;
+    font-family: "Raleway", sans-serif;
+    font-size: 9em;
+    color: #ecb814;
+    padding-top: 10%;
+    /* text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; */
+  }
+  h1 {
+    text-align: center;
+    font-size: 2em;
+    font-family: "Catamaran", sans-serif;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
 
-body {
-  margin: auto;
-  max-width: 750px;
-  background-color: #d3d3d3;
-  background-image: url("/imgfolder/lemon.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center center;
-}
-header {
-  text-align: center;
-  font-family: "Raleway", sans-serif;
-  font-size: 9em;
-  color: #ecb814;
-  padding-top: 10%;
-  /* text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; */
-}
-h1 {
-  text-align: center;
-  font-size: 2em;
-  font-family: "Catamaran", sans-serif;
-}
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  display: inline;
-  margin: 13%;
-}
-.navigation {
-  padding: 3%;
-  text-align: center;
-  background-color: black;
-  color: white;
-  border-radius: 25px;
-  border: 2px solid black;
-  /* opacity: 0.7; */
-  position: sticky;
-  top: 0;
-  /* width: 50%; */
-  z-index: 1;
-}
-/* 
+  li {
+    display: inline;
+    margin: 13%;
+  }
+  .navigation {
+    padding: 3%;
+    text-align: center;
+    background-color: black;
+    color: white;
+    border-radius: 25px;
+    border: 2px solid black;
+    /* opacity: 0.7; */
+    position: sticky;
+    top: 0;
+    /* width: 50%; */
+    z-index: 1;
+  }
+  /* 
 not using this one ?? */
-/* .navigation:hover {
+  /* .navigation:hover {
   background: #000000;
   opacity: 1;
 } */
-a {
-  text-decoration: none;
-  color: white;
-}
-a:hover {
-  color: #ecb814;
-}
-article {
-  margin-right: 3.5%;
-  margin-left: 3.5%;
-  padding-bottom: 10%;
-  font-family: "Kanit", sans-serif;
+  a {
+    text-decoration: none;
+    color: white;
+  }
+  a:hover {
+    color: #ecb814;
+  }
+  article {
+    margin-right: 3.5%;
+    margin-left: 3.5%;
+    padding-bottom: 10%;
+    font-family: "Kanit", sans-serif;
+    font-size: 14px;
+  }
+
+  h1 {
+    margin-right: 3.5%;
+    margin-left: 3.5%;
+    font-size: 18px;
+    font-family: "Kanit", sans-serif;
+  }
+  h2 {
+    margin-right: 3.5%;
+    margin-left: 3.5%;
+    font-size: 18px;
+    font-family: "Kanit", sans-serif;
+  }
+  h3 {
+    margin-right: 3.5%;
+    margin-left: 3.5%;
+    font-size: 18px;
+    font-family: "Kanit", sans-serif;
+  }
+
+  .information {
+    font-family: "Kanit", sans-serif;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
+    border: 2px rgba(0, 0, 0, 0.5);
+    color: white;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
 }
 
-h1 {
-  margin-right: 3.5%;
-  margin-left: 3.5%;
-  font-size: 18px;
-  font-family: "Kanit", sans-serif;
-}
-h2 {
-  margin-right: 3.5%;
-  margin-left: 3.5%;
-  font-size: 18px;
-  font-family: "Kanit", sans-serif;
-}
-h3 {
-  margin-right: 3.5%;
-  margin-left: 3.5%;
-  font-size: 18px;
-  font-family: "Kanit", sans-serif;
+/* /////
+//////
+THIS IS ONLY FOR CELL PHONE GOING LOWER 
+/////
+///// */
+
+@media only screen and (max-width: 375px) {
+  body {
+    margin: auto;
+    /* max-width: 00px; */
+    background-color: #d3d3d3;
+    background-image: url("/imgfolder/lemon3.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+  }
+  .cellphoneheader {
+    text-align: center;
+    font-family: "Raleway", sans-serif;
+    font-size: 10em;
+    color: #ecb814;
+    padding-top: 5%;
+  }
+  header {
+    display: none;
+    text-align: center;
+    font-family: "Raleway", sans-serif;
+    font-size: 3em;
+    color: #ecb814;
+    padding-top: 5%;
+  }
+  h1 {
+    text-align: center;
+    font-size: 2em;
+    font-family: "Catamaran", sans-serif;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  .navigation {
+    padding: 3%;
+    text-align: center;
+    background-color: black;
+    color: white;
+    border-radius: 25px;
+    border: 2px solid black;
+    opacity: 0.7;
+    position: sticky;
+    top: 0;
+    /* width: 50%; */
+    z-index: 1;
+  }
+  a {
+    text-decoration: none;
+    color: white;
+  }
+  a:hover {
+    color: #ecb814;
+  }
+  article {
+    margin-right: 3.5%;
+    margin-left: 3.5%;
+    padding-bottom: 10%;
+    font-family: "Kanit", sans-serif;
+    font-size: 14px;
+  }
+
+  h1 {
+    margin-right: 3.5%;
+    margin-left: 3.5%;
+    font-size: 18px;
+    font-family: "Kanit", sans-serif;
+  }
+  h2 {
+    margin-right: 3.5%;
+    margin-left: 3.5%;
+    font-size: 18px;
+    font-family: "Kanit", sans-serif;
+  }
+  h3 {
+    margin-right: 3.5%;
+    margin-left: 3.5%;
+    font-size: 18px;
+    font-family: "Kanit", sans-serif;
+  }
+
+  .information {
+    font-family: "Kanit", sans-serif;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
+    border: 2px rgba(0, 0, 0, 0.5);
+    color: white;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
 }
