--- a/cssfolder/style.css
+++ b/cssfolder/style.css
@@ -14,81 +14,235 @@ background-color: #def1f1;
 color: #ecb814; yellor for about me section
 background-color: #D3D3D3; about me section
 */
+@media (min-width: 401px) {
+  body {
+    margin: auto;
+    max-width: 750px;
+    background-color: #def1f1;
+    background-image: url("/imgfolder/blueberries.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+  }
+  header {
+    text-align: center;
+    font-family: "Raleway", sans-serif;
+    font-size: 9em;
+    color: #5cbdbb;
+    padding-top: 10%;
+    /* text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; */
+  }
 
-body {
-  margin: auto;
-  max-width: 750px;
-  background-color: #def1f1;
-}
-header {
-  text-align: center;
-  font-family: "Raleway", sans-serif;
-  font-size: 9em;
-  color: #5cbdbb;
-  padding-top: 10%;
-  /* text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; */
-}
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
+  .cellphoneheader {
+    display: none;
+    text-align: center;
+    font-family: "Raleway", sans-serif;
+    font-size: 10em;
+    color: #5cbdbb;
+    padding-top: 5%;
+  }
 
-li {
-  display: inline;
-  margin: 13%;
-}
-.navigation {
-  padding: 3%;
-  text-align: center;
-  background-color: black;
-  color: white;
-  border-radius: 25px;
-  border: 2px solid black;
-  opacity: 0.7;
-  position: sticky;
-  top: 0;
-  /* width: 50%; */
-  z-index: 1;
-}
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
 
-a {
-  text-decoration: none;
-  color: white;
-}
-a:hover {
-  color: #5cbdbb;
-}
-.inputsection {
-  padding: 3%;
-  text-align: center;
-  font-size: 10px;
-}
-.resultindex {
-  text-align: center;
-  font-family: "Kanit", sans-serif;
-}
+  li {
+    display: inline;
+    margin: 13%;
+  }
+  .navigation {
+    padding: 3%;
+    text-align: center;
+    background-color: black;
+    color: white;
+    border-radius: 25px;
+    border: 2px solid black;
+    opacity: 0.7;
+    position: sticky;
+    top: 0;
+    /* width: 50%; */
+    z-index: 1;
+  }
 
-h1 {
-  font-size: 14px;
+  a {
+    text-decoration: none;
+    color: white;
+  }
+  a:hover {
+    color: #5cbdbb;
+  }
+  .inputsection {
+    padding: 3%;
+    text-align: center;
+    font-size: 10px;
+  }
+  .resultindex {
+    text-align: center;
+    font-family: "Kanit", sans-serif;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
+    border: 2px rgba(0, 0, 0, 0.5);
+    /* opacity: 0.7; */
+    /* z-index: 1; */
+    color: white;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+
+  h1 {
+    font-size: 14px;
+    opacity: 1;
+    z-index: 1;
+  }
+  h2 {
+    font-size: 12px;
+    opacity: 1;
+    z-index: 1;
+  }
+  h3 {
+    font-size: 12px;
+    opacity: 1;
+    z-index: 1;
+  }
+  h4 {
+    font-size: 12px;
+    opacity: 1;
+    z-index: 1;
+  }
+  h5 {
+    font-size: 12px;
+    opacity: 1;
+    z-index: 1;
+  }
+  .newdiv {
+    padding-bottom: 3%;
+    z-index: 1;
+    opacity: 1;
+  }
+  p {
+    font-family: "Catamaran", sans-serif;
+    color: rgb(3, 145, 136);
+    font-size: 18px;
+    opacity: 1;
+    z-index: 1;
+    padding-top: 2%;
+  }
 }
-h2 {
-  font-size: 12px;
-}
-h3 {
-  font-size: 12px;
-}
-h4 {
-  font-size: 12px;
-}
-h5 {
-  font-size: 12px;
-}
-.newdiv {
-  padding-bottom: 5%;
-}
-p {
-  font-family: "Catamaran", sans-serif;
-  color: rgb(3, 145, 136);
-  font-size: 18px;
+/* /////
+////
+////
+////
+//// */
+/* MOBILE VIEW BELOW  */
+@media only screen and (max-width: 375px) {
+  body {
+    margin: auto;
+    /* max-width: 00px; */
+    background-color: #d3d3d3;
+    background-image: url("/imgfolder/blueberries.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+  }
+  .cellphoneheader {
+    text-align: center;
+    font-family: "Raleway", sans-serif;
+    font-size: 10em;
+    color: #5cbdbb;
+    padding-top: 5%;
+  }
+  header {
+    display: none;
+    text-align: center;
+    font-family: "Raleway", sans-serif;
+    font-size: 3em;
+    color: #5cbdbb;
+    padding-top: 5%;
+  }
+  h1 {
+    text-align: center;
+    font-size: 2em;
+    font-family: "Catamaran", sans-serif;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  .navigation {
+    padding: 3%;
+    text-align: center;
+    background-color: black;
+    color: white;
+    border-radius: 0px;
+    border: 3px solid black;
+    /* opacity: 0.7; */
+    position: sticky;
+    top: 0;
+    /* width: 100%; */
+    z-index: 1;
+    font-size: 1rem;
+  }
+  a {
+    text-decoration: none;
+    color: white;
+  }
+  a:hover {
+    color: #5cbdbb;
+  }
+  .resultindex {
+    text-align: center;
+    font-family: "Kanit", sans-serif;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
+    border: 2px rgba(0, 0, 0, 0.5);
+    /* opacity: 0.7; */
+    /* z-index: 1; */
+    color: white;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+
+  h1 {
+    font-size: 14px;
+    opacity: 1;
+    z-index: 1;
+  }
+  h2 {
+    font-size: 12px;
+    opacity: 1;
+    z-index: 1;
+  }
+  h3 {
+    font-size: 12px;
+    opacity: 1;
+    z-index: 1;
+  }
+  h4 {
+    font-size: 12px;
+    opacity: 1;
+    z-index: 1;
+  }
+  h5 {
+    font-size: 12px;
+    opacity: 1;
+    z-index: 1;
+  }
+  .newdiv {
+    padding-bottom: 3%;
+    z-index: 1;
+    opacity: 1;
+  }
+  p {
+    font-family: "Catamaran", sans-serif;
+    color: rgb(3, 145, 136);
+    font-size: 18px;
+    opacity: 1;
+    z-index: 1;
+    padding-top: 2%;
+  }
 }
