--- a/cssfolder/farmers.css
+++ b/cssfolder/farmers.css
@@ -18,8 +18,8 @@ background-color: #D3D3D3; about me section
   body {
     margin: auto;
     max-width: 750px;
-    background-color: #def1f1;
-    background-image: url("/imgfolder/blueberries.jpg");
+    background-color: #fca034;
+    background-image: url("/imgfolder/sidefood.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -29,7 +29,7 @@ background-color: #D3D3D3; about me section
     text-align: center;
     font-family: "Raleway", sans-serif;
     font-size: 9em;
-    color: #5cbdbb;
+    color: #fca034;
     padding-top: 10%;
     /* text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; */
   }
@@ -39,7 +39,7 @@ background-color: #D3D3D3; about me section
     text-align: center;
     font-family: "Raleway", sans-serif;
     font-size: 10em;
-    color: #5cbdbb;
+    color: #fca034;
     padding-top: 5%;
   }
 
@@ -72,7 +72,10 @@ background-color: #D3D3D3; about me section
     color: white;
   }
   a:hover {
-    color: #5cbdbb;
+    color: #fca034;
+  }
+  .link {
+    font-size: 12px;
   }
   .inputsection {
     padding: 3%;
@@ -93,15 +96,18 @@ background-color: #D3D3D3; about me section
   }
 
   h1 {
-    color: #5cbdbb;
+    margin-right: 3.5%;
+    margin-left: 3.5%;
+    font-size: 18px;
+    font-family: "Kanit", sans-serif;
+    text-align: center;
+  }
+
+  h2 {
+    color: #fca034;
     font-size: 5em;
     padding-top: 2%;
     font-size: 20px;
-    opacity: 1;
-    z-index: 1;
-  }
-  h2 {
-    font-size: 12px;
     opacity: 1;
     z-index: 1;
   }
@@ -144,8 +150,8 @@ background-color: #D3D3D3; about me section
   body {
     margin: auto;
     /* max-width: 00px; */
-    background-color: #d3d3d3;
-    background-image: url("/imgfolder/blueberries.jpg");
+    background-color: #fca034;
+    background-image: url("/imgfolder/sidefood.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -155,7 +161,7 @@ background-color: #D3D3D3; about me section
     text-align: center;
     font-family: "Raleway", sans-serif;
     font-size: 10em;
-    color: #5cbdbb;
+    color: #fca034;
     padding-top: 5%;
   }
   header {
@@ -163,7 +169,7 @@ background-color: #D3D3D3; about me section
     text-align: center;
     font-family: "Raleway", sans-serif;
     font-size: 3em;
-    color: #5cbdbb;
+    color: #fca034;
     padding-top: 5%;
   }
   h1 {
@@ -195,7 +201,10 @@ background-color: #D3D3D3; about me section
     color: white;
   }
   a:hover {
-    color: #5cbdbb;
+    color: #fca034;
+  }
+  .link {
+    font-size: 12px;
   }
   .resultindex {
     text-align: center;
