--- a/WICPROJECT/cssfolder/about.css
+++ b/WICPROJECT/cssfolder/about.css
@@ -17,7 +17,7 @@ background-color: #D3D3D3; about me section
     margin: auto;
     max-width: 750px;
     background-color: #d3d3d3;
-    background-image: url("/imgfolder/lemon3.jpg");
+    background-image: url("/WICPROJECT/imgfolder/lemon3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -129,7 +129,7 @@ THIS IS ONLY FOR CELL PHONE GOING LOWER
     margin: auto;
     /* max-width: 00px; */
     background-color: #d3d3d3;
-    background-image: url("/imgfolder/lemon3.jpg");
+    background-image: url("/WICPROJECT/imgfolder/lemon3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
