--- a/WICPROJECT/cssfolder/home.css
+++ b/WICPROJECT/cssfolder/home.css
@@ -19,7 +19,7 @@ background-color: #D3D3D3; about me section
     margin: auto;
     max-width: 750px;
     background-color: #def1f1;
-    background-image: url("/imgfolder/blueberries.jpg");
+    background-image: url("/WICPROJECT/imgfolder/blueberries.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -145,7 +145,7 @@ background-color: #D3D3D3; about me section
     margin: auto;
     /* max-width: 00px; */
     background-color: #d3d3d3;
-    background-image: url("/imgfolder/blueberries.jpg");
+    background-image: url("/WICPROJECT/imgfolder/blueberries.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
