--- a/WICPROJECT/cssfolder/info.css
+++ b/WICPROJECT/cssfolder/info.css
@@ -17,7 +17,7 @@ background-color: #D3D3D3; about me section
     margin: auto;
     max-width: 750px;
     background-color: #dae4d3;
-    background-image: url("/imgfolder/fern.jpg");
+    background-image: url("/WICPROJECT/imgfolder/fern.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -122,7 +122,7 @@ background-color: #D3D3D3; about me section
     margin: auto;
     /* max-width: 00px; */
     background-color: #d3d3d3;
-    background-image: url("/imgfolder/fern.jpg");
+    background-image: url("/WICPROJECT/imgfolder/fern.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
