--- a/WICPROJECT/cssfolder/enter.css
+++ b/WICPROJECT/cssfolder/enter.css
@@ -15,7 +15,7 @@ background-color: #D3D3D3; about me section
 
 body {
   margin: auto;
-  max-width: 750px;
+  max-width: 600px;
   background-color: #d3d3d3;
   background-image: url("/WICPROJECT/imgfolder/enter.jpg");
   background-repeat: no-repeat;
@@ -28,14 +28,15 @@ header {
   font-family: "Raleway", sans-serif;
   font-size: 12em;
   color: #ecb814;
-  padding-top: 20%;
+  padding-top: 16%;
+  margin: auto;
   /* text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; */
 }
 a {
   text-decoration: none;
   color: #f9b309;
-  transition: 3.5s;
-  -webkit-transition: 3.5s;
+  transition: 3s;
+  /* -webkit-transition: 3.5s; */
 }
 a:hover {
   color: #e80b37;
@@ -61,7 +62,7 @@ MOBILE SECTION
 @media only screen and (max-width: 375px) {
   body {
     margin: auto;
-    max-width: 750px;
+    max-width: 600px;
     background-color: #d3d3d3;
     background-image: url("/WICPROJECT/imgfolder/enter.jpg");
     background-repeat: no-repeat;
