--- a/WICPROJECT/cssfolder/farmers.css
+++ b/WICPROJECT/cssfolder/farmers.css
@@ -139,6 +139,11 @@ background-color: #D3D3D3; about me section
     z-index: 1;
     padding-top: 2%;
   }
+  footer {
+    text-align: center;
+    font-size: 14px;
+    padding: 9%;
+  }
 }
 /* /////
 ////
@@ -256,5 +261,10 @@ background-color: #D3D3D3; about me section
     opacity: 1;
     z-index: 1;
     padding-top: 2%;
+  }
+  footer {
+    text-align: center;
+    font-size: 14px;
+    padding: 9%;
   }
 }
