--- a/WICPROJECT/cssfolder/home.css
+++ b/WICPROJECT/cssfolder/home.css
@@ -133,6 +133,11 @@ background-color: #D3D3D3; about me section
     z-index: 1;
     padding-top: 2%;
   }
+  footer {
+    text-align: center;
+    font-size: 14px;
+    padding: 9%;
+  }
 }
 /* /////
 ////
@@ -247,5 +252,10 @@ background-color: #D3D3D3; about me section
     opacity: 1;
     z-index: 1;
     padding-top: 2%;
+  }
+  footer {
+    text-align: center;
+    font-size: 14px;
+    padding: 9%;
   }
 }
